[package]
name = "cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.11", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["serde"] }
serde = "1.0.171"
